# pyfrctc

./: .flake8  README.md  pyproject.toml  requirements.txt
pyfrctc/: __init__.py  pyfrctc.py
